src/Dependencies/libtase2-2.3.0/src/inc/tase2_model.h

typedef enum {
    TASE2_EDITION_1996_08 = 1,
    TASE2_EDITION_2000_08 = 2
} Tase2_Edition;
/**
 * \defgroup tase2_model Server side data model related API parts
 * @{
 */

typedef struct sTase2_DataModel* Tase2_DataModel;
typedef struct sTase2_Domain* Tase2_Domain;
/**
 * \brief Create a new data model instance
 *
 * NOTE: a data model can only be used by a single \ref Tase2_Server instance!
 */
TASE2_API Tase2_DataModel
Tase2_DataModel_create();
/**
 * \brief Set the TASE.2/ICCP edition to be used with the data model
 *
 * \param edition the TASE.2/ICCP standard edition to be used
 */
TASE2_API void
Tase2_DataModel_setEdition(Tase2_DataModel self, Tase2_Edition edition);
/**
 * \brief Release all resources and memory used by the data model
 */
TASE2_API void
Tase2_DataModel_destroy(Tase2_DataModel self);
/**
 * \brief Add a TASE.2 domain to the data model
 *
 * \param domainName the name of the domain (max. 32 characters)
 *
 * \return the new domain instance
 */
TASE2_API Tase2_Domain
Tase2_DataModel_addDomain(Tase2_DataModel self, const char* domainName);
/**
 * \brief Get the domain instance with a specific name
 *
 * \param domainName the domain name
 *
 * \return the domain with the specified name
 */
TASE2_API Tase2_Domain
Tase2_DataModel_getDomain(Tase2_DataModel self, const char* domainName);
/**
 * \brief Get the VCC pseudo domain that is representing the VCC scope data model items.
 *
 * \return domain object the is representing the VCC scope
 */
TASE2_API Tase2_Domain
Tase2_DataModel_getVCC(Tase2_DataModel self);